--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.wt
+*.2021-05-21T13-30-36Z-00000
+*.interim
+*.0000000001
+*.0000000002
+*.lock
+*.bson
+MongoDB_Data/WiredTiger
+*.turtle
